--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,10 @@ android {
 
 dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    //noinspection GradleDependency
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    //noinspection GradleDependency
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
